# SecureAuthenticator

./: .gitignore  CMakeLists.txt  README.md  email_sender.py
include/: sha256.h
src/: Client.cpp  Server.cpp
